# NDKDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jerry/ndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_jerry_ndk_FFmpegUtil.h  ffmpegutil.c  native-lib.cpp
app/src/main/java/com/jerry/ndk/: FFmpegUtil.java  MainActivity.java
app/src/test/java/com/jerry/ndk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
